--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "puppet-modules/solr"]
 	path = puppet-modules/solr
 	url = https://github.com/zivtech/puppet-drupal-solr.git
+[submodule "puppet-modules/redis"]
+	path = puppet-modules/redis
+	url = https://github.com/thomasvandoren/puppet-redis.git
