--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "puppet-modules/redis"]
 	path = puppet-modules/redis
 	url = https://github.com/thomasvandoren/puppet-redis.git
+[submodule "puppet-modules/stdlib"]
+	path = puppet-modules/stdlib
+	url = https://github.com/puppetlabs/puppetlabs-stdlib.git
