--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "puppet-modules/stdlib"]
 	path = puppet-modules/stdlib
 	url = https://github.com/puppetlabs/puppetlabs-stdlib.git
+[submodule "puppet-modules/epel"]
+	path = puppet-modules/epel
+	url = https://github.com/stahnma/puppet-module-epel.git
