Moving hiera conifguration into the hiera folder for cleanliness, adding the customization file to the .gitignore.

--- a/default.config.yaml
+++ b/default.config.yaml
@@ -3,8 +3,10 @@ hostname: "local"
 # The private IP to provision for this host.
 private_ip: "33.33.33.40"
 # The base box to use to build the puppet work on top of.
-# For the box, `puppetlabs/ubuntu-14.04-64-puppet` should also work.
+# Commetning out the line below (or overriding in config,yaml)
+# to switch to 12.04 should also work.
 box: "puppetlabs/ubuntu-14.04-64-puppet" 
+#box: puppetlabs/ubuntu-12.04-64-puppet
 # The amount of memory (in megabytes) to provision.
 memory: "2048"
 # Set this to false in order to not mount the www folder in this
