--- a/hiera/common.yaml
+++ b/hiera/common.yaml
@@ -14,3 +14,4 @@ drush_patchfile::git_ref: 'e7ffe4ccbb4c7c768788d0c24e6a18835eb35f74'
 drush::configs:
   patch-file:
     value: patches.make
+drush_fetcher::git_ref: 'bca77635d66e2f067bfe3b979b448caa73bd9b90'
