Updating default hostname to "vm".
We had the default hostname set to "local". This had been found
to cause issues with certain front-end development tools. The
following was reported:

"...when using browsersync for our development, we need to proxy
the vm and the .local address is used by the native Bonjour app
on OSX, making browsersync barely usable."

This change resolves the address conflict issue.

--- a/default.config.yaml
+++ b/default.config.yaml
@@ -1,5 +1,7 @@
 # The hostname that gets set inside the VM.
-hostname: "local"
+# When using browsersync for front-end development we need to proxy the vm and the .local hostname is already in use by the native Bonjour app on OSX.
+# Using local for the hostname makes browsersync unusable in this configuration, so we have updated the local hostname to vm instead.
+hostname: "vm"
 # The private IP to provision for this host.
 private_ip: "33.33.33.40"
 # The base box to use to build the puppet work on top of.
