Removing deprecated boxes and changing comment to match for box config

--- a/default.config.yaml
+++ b/default.config.yaml
@@ -5,14 +5,9 @@ hostname: "local.zivtech.com"
 # The private IP to provision for this host.
 private_ip: "172.16.0.2"
 # The base box to use to build the puppet work on top of.
-# Comment out the two lines below (or overriding in config,yaml)
-# to switch to 12.04.
+# Change the version number in the line below (or override in config.yaml)
+# to switch Ubuntu versions.
 box: "zivtech/ubuntu-16.04-server-puppet-4"
-#box: "puppetlabs/ubuntu-14.04-64-puppet-1.0.0"
-#box_url: "https://atlas.hashicorp.com/puppetlabs/boxes/ubuntu-14.04-64-puppet/versions/1.0.0/providers/virtualbox.box"
-# Un-comment the next two lines, to use 12.04
-#box: "puppetlabs/ubuntu-12.04-64-puppet-1.0.0"
-#box_url: "https://atlas.hashicorp.com/puppetlabs/boxes/ubuntu-12.04-64-puppet/versions/1.0.0/providers/virtualbox.box"
 # The amount of memory (in megabytes) to provision.
 memory: "2048"
 cpus: 2
