--- a/hiera/common.yaml
+++ b/hiera/common.yaml
@@ -17,4 +17,7 @@ drush_patchfile::git_ref: '642394617e494ccdc81f2319ca5d2266df1c58e4'
 drush::configs:
   patch-file:
     value: patches.make
+  fetcher:
+    value: array('info_fetcher.class' => 'FetcherServices\InfoFetcher\FetcherServices', 'info_fetcher.config' => array('host' => ''))
+    string: false
 drush_fetcher::git_ref: '0ebf8cc9c1ba8d57e4a5843d0c5566b113b6c4af'
