--- a/hiera/common.yaml
+++ b/hiera/common.yaml
@@ -11,6 +11,14 @@ drupal_php::post_max_size: '8M'
 drupal_php::server::apache::mpm_module: event
 drupal_php::timezone: 'UTC'
 drupal_php::upload_max_filesize: 200M
+nvm::node_versions:
+  -
+    alias: default
+    version: '8.12.0'
+nvm::users:
+  -
+    name: "%{::webadmin::webadminuser}"
+    home: "/home/%{::webadmin::webadminuser}"
 php::globals::php_version: '7.1'
 php::package_prefix: 'php%{::php::globals::php_version}-'
 drush_patchfile::git_ref: '642394617e494ccdc81f2319ca5d2266df1c58e4'
